[package]
name = "leetcode_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.12.2"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15.0"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
